nav fix 11 and overflow-x added

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -40,8 +40,11 @@ div, section, main, aside, header, footer {
 .nav-trigger.close {
   color: black;
   z-index: 1000;
-  position: relative;
+  position: fixed;
+  top: 0px;
+  right: 0px;
   font-weight: bold;
+
 }
 
 nav {
